@@ -3,6 +3,7 @@ package io.bumsoft.service;
 
 import io.bumsoft.dao.entity.AutomatedPlan;
 import io.bumsoft.dao.repository.AutomatedPlanRepository;
+import io.bumsoft.dao.specifications.AutomatedPlanQueryBuilder;
 import io.bumsoft.dto.common.AutomatedPlanDto;
 import io.bumsoft.exception.BumsoftException;
 import io.bumsoft.mapper.AutomatedPlanMapper;
@@ -12,26 +13,29 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static java.util.Objects.isNull;
 
 @Slf4j
 @Service
-public class AutomatedPlanService extends AbstractBumsoftService<AutomatedPlan, AutomatedPlanDto, AutomatedPlanMapper, Long, AutomatedPlanRepository> {
+public class AutomatedPlanService extends AbstractBumsoftService<AutomatedPlan, AutomatedPlanDto, Long> {
 
     private final AutomatedPlanRepository repository;
     private final AutomatedPlanMapper mapper;
 
 
-    public AutomatedPlanService(AutomatedPlanRepository repository, AutomatedPlanMapper mapper, ValidationService<AutomatedPlan> validationService) {
-        super(repository, mapper, validationService);
+    public AutomatedPlanService(
+            AutomatedPlanRepository repository,
+            AutomatedPlanMapper mapper,
+            ValidationService<AutomatedPlan> validationService,
+            AutomatedPlanQueryBuilder queryBuilder) {
+        super(repository, mapper, validationService, queryBuilder);
         this.repository = repository;
         this.mapper = mapper;
     }
 
     public Either<BumsoftException, List<AutomatedPlanDto>> findByUserId(Long userId) {
-        List<AutomatedPlanDto> plans = this.repository.findByUserIdAndIsActiveIsTrue(userId).stream().map(mapper::toDto).collect(Collectors.toList());
+        List<AutomatedPlanDto> plans = this.repository.findByUserIdAndIsActiveIsTrue(userId).stream().map(mapper::toDto).toList();
         return plans.isEmpty() ? Either.left(new BumsoftException("No plan found for user " + userId)) : Either.right(plans);
     }
 
